I edited the titles of the pages, reorganized them, and edited the title page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,15 +11,15 @@ website:
       - about.qmd
       - csv.qmd
       - Projects.qmd
-      - Rugby.qmd
+      - research.qmd
 
 format:
   html:
     theme:
-      - cosmo
-      - brand
-    css: styles.css
+      - styles.scss
+    mainfont: Sen
     toc: true
+    page-layout: full
 
 editor: visual
 
