Writing outline of all pages.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "angelalarson.github.io"
+  title: "Angela Larson"
   navbar:
     left:
       - href: index.qmd
